refactored friends to handle all cases
